--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-h1 {text-align: center;}
-p {text-align: center;}
-div {text-align: center;}
-label {text-align: center;}
-button {text-align: center;}
+#countLabel {
+    display: black;
+    text-align: center;
+
+}
