--- a/src/styles/ssomar-plugins-tools.css
+++ b/src/styles/ssomar-plugins-tools.css
@@ -39,3 +39,18 @@ How to use?
 .score_button-selected {
     @apply bg-blue-500 w-full font-minecraft text-4xl border-4 border-blue-700 mb-5
 }
+
+/*=====================================================================================*/
+/*=====================================================================================*/
+/*=====================================================================================*/
+
+
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+select::-ms-expand {
+    display: none;
+}
