uploading progress in reworking the home page

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,4 +11,8 @@
   font-family: "open-sans";
   src: url("../fonts/open-sans.ttf");
 }
+@font-face {
+  font-family: "host-grotesk";
+  src: url("../fonts/host-grotesk.ttf")
+}
 }
