Finished polishing the front page

--- a/src/styles/reusable-styles.css
+++ b/src/styles/reusable-styles.css
@@ -1,3 +1,7 @@
 .responsive-flex-direction {
     @apply flex flex-row viewport<=910px:flex-col
 }
+
+.hover-button-increase {
+    @apply transition ease-in-out hover:scale-105 cursor-pointer
+}
